# InContextLearning

./: .gitignore  README.md  pyproject.toml
dashboards/: app.py  server.py  ui.py
dashboards/evolution/: app.py
dashboards/on_off_target/: app.py  server.py  ui.py  utils.py
data/tmp/run_001/: config.json
data/tmp/run_002/artifacts/: attn1_step_0.npy  attn1_step_19.npy  attn2_step_0.npy  attn2_step_19.npy
data/tmp/run_003/artifacts/: attn1_step_0.npy  attn1_step_19.npy  attn2_step_0.npy  attn2_step_19.npy
data/tmp/run_004/: config.json  metrics.csv
data/tmp/run_004/artifacts/: attn1_step_0.npy  attn1_step_19.npy  attn2_step_0.npy  attn2_step_19.npy  index.csv
data/tmp/run_005/: config.json  metrics.csv
data/tmp/run_005/artifacts/: attn1_step_0.npy  attn1_step_124.npy  attn1_step_249.npy  attn1_step_374.npy  attn1_step_499.npy  attn2_step_0.npy  attn2_step_124.npy  (+4 more)
notebooks/: 26-07-13-on_off-logits.ipynb  26_05_13_Model_Scaling.ipynb  26_05_27_Gradient_Descent.ipynb  26_06_13_Model_Scaling.ipynb  26_06_16_Order_Parameters_Concentration.ipynb  26_06_23_Transition_Matrix.ipynb  logits_animation.html  template.ipynb  test_theory.ipynb
scripts/: concentration.py  dash_template.py  logits_meanfield.py  main.py  test.py
shell/: submit.sh
src/configurations/: __init__.py  plot_config.py
src/icl/: __init__.py
src/icl/data/: __init__.py  dual_data.py  trigg_data.py
src/icl/evaluation/: __init__.py  scalar_probes.py  tensor_probes.py  theory.py  training.py  utils.py
src/icl/models/: __init__.py  low_rank.py  minimal_model.py  simple_transformer.py
