# Choosing a build backend: 
requires = ["setuptools"] 
build-backend = "setuptools.build_meta" 

[project]
name = "icl"
version = "0.0.1"
description = "In context learning experiments"
authors = [
    { name = "Cristopher Erazo", email = "cerazova@sissa.it" }
]
dynamic = ["dependencies"] 

[tool.setuptools.packages.find] 
where = ["src"] 
exclude = ["scripts", "shell","notebooks"] 

[tool.setuptools.dynamic] 
dependencies = { file = ["requirements.txt"] } 

[project.optional-dependencies] 
test = ["pytest"]
